Fixing alignment

--- a/styles/application.css
+++ b/styles/application.css
@@ -163,20 +163,21 @@ body {
   -webkit-box-flex: 3;
   -webkit-flex-grow: 3;
       -ms-flex-positive: 3;
-          flex-grow: 3; }
+          flex-grow: 3;
+  width: 70%; }
 
 .task-category {
   -webkit-box-flex: 2;
   -webkit-flex-grow: 2;
       -ms-flex-positive: 2;
           flex-grow: 2;
+  width: 30%;
   margin-right: 8px; }
 
 .task-duration {
-  -webkit-box-flex: 1;
-  -webkit-flex-grow: 1;
-      -ms-flex-positive: 1;
-          flex-grow: 1; }
+  padding-right: 8px;
+  width: 120px;
+  text-align: right; }
 
 .task .btn, .new-task-btn {
   position: relative;
@@ -189,11 +190,15 @@ body {
   padding-bottom: 0;
   line-height: 100%;
   font-size: 1.1em;
-  text-shadow: 0 1px 0 rgba(255, 255, 255, 0.3); }
+  text-shadow: 0 1px 1px rgba(255, 255, 255, 0.3); }
+
+.new-task .task-category {
+  width: calc(30% + 144px); }
 
 .current-task {
   margin: 8px 0;
-  line-height: 1.3em; }
+  line-height: 1.3em;
+  border-color: #e6e6e6; }
   .current-task .task-title {
     display: inline-block;
     font-size: 1.3em; }
@@ -212,7 +217,8 @@ body {
   margin: 0;
   padding: 0; }
   .finished-tasks .task {
-    margin-bottom: 8px; }
+    margin-bottom: 8px;
+    border-color: #e6e6e6; }
 
 .subtle-input {
   position: relative;
@@ -220,7 +226,7 @@ body {
   width: 100%; }
   .subtle-input input {
     display: inline-block;
-    width: 75%;
+    width: 100%;
     font-size: 1.5em;
     background: inherit;
     border: none;
