--- a/styles/components/_subtle-input.scss
+++ b/styles/components/_subtle-input.scss
@@ -5,7 +5,7 @@
 
   input {
     display: inline-block;
-    width: 75%;
+    width: 100%;
     font-size: 1.5em;
     background: inherit;
     border: none;
